refactor: optimize application.yml settings
- Remove unused comments
- Format configuration

Closes #2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081  # Keycloak (8080) ile çakışmaması için harika tercih!
+  port: 8081
 
 spring:
   datasource:
@@ -10,34 +10,28 @@ spring:
 
   jpa:
     hibernate:
-      # ÖNEMLİ: Liquibase kullanacağımız için burayı 'validate' yapıyoruz.
-      # 'update' kalırsa Liquibase ile çakışıp "users table exists" hatası verir.
       ddl-auto: validate
     show-sql: true
     properties:
       hibernate.jdbc.lob.non_contextual_creation: true
     open-in-view: off
 
-  # --- EKLENMESİ GEREKEN EKSİKLER ---
 
-  # 1. LIQUIBASE (Veritabanı Tablolarını Yönetmesi İçin)
+  # 1. LIQUIBASE
   liquibase:
     change-log: classpath:db/changelog/db.changelog-master.yaml
-    # Geliştirme aşamasında veritabanını temizleyip baştan kurması için true yapabilirsin.
-    # Her şey oturduğunda bunu false yapmalısın.
     drop-first: true
 
-  # 2. REDIS (Önbellek İçin)
+  # 2. REDIS
   data:
     redis:
       host: localhost
       port: 6379
 
-  # 3. KEYCLOAK (Güvenlik İçin)
+  # 3. KEYCLOAK
   security:
     oauth2:
       resourceserver:
         jwt:
-          # Spring Boot, gelen token'ın geçerli olup olmadığını bu adrese soracak
           issuer-uri: http://localhost:8080/realms/ticket-platform
           jwk-set-uri: http://localhost:8080/realms/ticket-platform/protocol/openid-connect/certs
